--- a/src/scss/_partial/_post/_code.scss
+++ b/src/scss/_partial/_post/_code.scss
@@ -2,6 +2,7 @@
 
 
 // ========== code style ========== //
+.abstract-content,
 .article-entry {
     // ========== toggle ========== //
 
